@@ -98,7 +98,8 @@ cupt (2.9.0~) UNRELEASED; urgency=medium
     - control:
       - Added 'Breaks: dpkg (<< 1.17.11~)' for versioned provides support.
     - rules:
-      - Enable dh_auto_configure's build system autodetection.
+      - Enabled dh_auto_configure's build system autodetection.
+      - Use -DCMAKE_BUILD_TYPE instead of -DOPTIMIZE.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 11 May 2014 21:26:32 +0300
 
